--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="navBar">
       <h1>Listes de fruits</h1>
       <input placeholder="rechercher un fruit ..." />
+      <div class="container-list"></div>
     </div>
     <script src="script.js" defer></script>
   </body>
