--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <body>
     <div class="navBar">
       <h1>Listes de fruits</h1>
-      <input placeholder="rechercher un fruit ..." />
+      <input
+        type="text"
+        id="input"
+        name="input"
+        placeholder="rechercher un fruit ..."
+      />
       <div class="container-list"></div>
     </div>
     <script src="script.js" defer></script>
