add class navBar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="navBar">
+    <nav class="navBar">
       <h1>Listes de fruits</h1>
       <input
         type="text"
@@ -16,7 +16,7 @@
         placeholder="rechercher un fruit ..."
       />
       <div class="container-list"></div>
-    </div>
+    </nav>
     <div>
       <ul>
         <li><a>oikokok</a></li>
